[package]
name = "aa-daemon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aa-models = { git = "ssh://git@github.com/GT3CH1/aa-models" }
aa-consts = { git = "ssh://git@github.com/GT3CH1/aa-consts" }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.2", features = ["full"] }
warp = "0.3"
parking_lot = "0.10.0"
isahc = "1.4.0"